unpackaged/main/default/objects/Directive_anticip_e__c/Directive_anticip_e__c.object-meta.xml
<CustomObject>
    <label>Directive anticipée</label>
    <nameField>
        <displayFormat>DA-{00000000}</displayFormat>
        <label>Nom de Directive anticipée</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Directives anticipées</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>