unpackaged/main/default/objects/Directive_anticip_e__c/fields/Date_directive_anticip_e__c.field-meta.xml
<CustomField>
    <fullName>Date_directive_anticip_e__c</fullName>
    <label>Date directive anticipée</label>
    <type>Date</type>
</CustomField>