unpackaged/main/default/objects/Directive_anticip_e__c/fields/Dossier_d_intervention__c.field-meta.xml
<CustomField>
    <fullName>Dossier_d_intervention__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dossier d&apos;intervention</label>
    <referenceTo>Dossier_de_prise_en_charge__c</referenceTo>
    <relationshipLabel>Directives anticipées</relationshipLabel>
    <relationshipName>Directives_anticip_es</relationshipName>
    <type>Lookup</type>
</CustomField>