unpackaged/main/default/objects/Directive_anticip_e__c/fields/Dossier_de_soins__c.field-meta.xml
<CustomField>
    <fullName>Dossier_de_soins__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dossier de soins</label>
    <referenceTo>Dossier_de_soins__c</referenceTo>
    <relationshipLabel>Directives anticipées</relationshipLabel>
    <relationshipName>Directives_anticip_es</relationshipName>
    <type>Lookup</type>
</CustomField>