unpackaged/main/default/objects/Directive_anticip_e__c/fields/Remarque__c.field-meta.xml
<CustomField>
    <fullName>Remarque__c</fullName>
    <label>Remarque</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>