unpackaged/main/default/objects/Directive_anticip_e__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Directives anticipées</relationshipLabel>
    <relationshipName>Directives_anticip_es</relationshipName>
    <type>Lookup</type>
</CustomField>